[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cenas/Menus/MenuOpcoes.gd" type="Script" id=1]
[ext_resource path="res://Public/backgroundMenuOptions.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 4.0
margin_right = 6.0
margin_bottom = 4.0
texture = ExtResource( 2 )
expand = true

[node name="BotaoVoltarMenuPrincipal" type="Button" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -562.0
margin_top = 486.0
margin_right = -511.0
margin_bottom = 508.0
rect_scale = Vector2( 1.6, 1.48 )
text = "Voltar"

[node name="ContainerOpcoes" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -109.0
margin_right = 109.5
margin_bottom = 109.0

[node name="MasterVolume" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_right = 219.0
margin_bottom = 14.0
text = "Volume Geral"

[node name="RangeMaster" type="SpinBox" parent="TextureRect/ContainerOpcoes"]
margin_top = 18.0
margin_right = 219.0
margin_bottom = 42.0
step = 10.0
value = 100.0

[node name="Music" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_top = 46.0
margin_right = 219.0
margin_bottom = 60.0
text = "Volume da Música"

[node name="RangeMusic" type="SpinBox" parent="TextureRect/ContainerOpcoes"]
margin_top = 64.0
margin_right = 219.0
margin_bottom = 88.0
step = 10.0
value = 100.0

[node name="SFX" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_top = 92.0
margin_right = 219.0
margin_bottom = 106.0
text = "Volume dos Efeitos Sonoros"

[node name="RangeSFX" type="SpinBox" parent="TextureRect/ContainerOpcoes"]
margin_top = 110.0
margin_right = 219.0
margin_bottom = 134.0
step = 10.0
value = 100.0

[node name="Language" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_top = 138.0
margin_right = 219.0
margin_bottom = 152.0
text = "Língua"

[node name="OptionButton" type="OptionButton" parent="TextureRect/ContainerOpcoes"]
margin_top = 156.0
margin_right = 219.0
margin_bottom = 176.0

[connection signal="pressed" from="TextureRect/BotaoVoltarMenuPrincipal" to="." method="_on_BotaoVoltarMenuPrincipal_pressed"]
